Update portfolio: add projects, experience, and improve content quality
- Add Unit Locator Project and Fixture Database Project (Welbilt)
- Add Daylun Robotics Software Engineer experience (Sep 2025 - Dec 2025)
- Professionalize all project descriptions (short and long formats)
- Improve education section formatting with bullet points
- Update View all button styling (white text with fade hover effect)
- Enhance overall content professionalism and consistency

--- a/about.html
+++ b/about.html
@@ -41,11 +41,11 @@
         <div>
           <h1 class="page-title">About</h1>
           <p class="lead">4th‑year Mechatronics Engineering student at the University of Waterloo, building across robotics, software, and mechanical design.</p>
-          <p>I enjoy applying systems thinking to practical problems—whether it’s localizing a robot with ROS2, designing fixtures that boost throughput on the manufacturing floor, or building clean UIs that let teams act on data faster. Outside of work, you’ll find me training for marathons or tackling puzzles.</p>
+          <p>I enjoy applying systems thinking to practical problems. Localizing a robot with ROS2, designing fixtures that boost throughput on the manufacturing floor, or building clean UIs that let teams act on data faster. Outside of work, you’ll find me running, playing sports, reading, or tackling puzzles.</p>
           <div class="cards compact">
             <article class="tile"><h3>Location</h3><p>Ontario, Canada</p></article>
             <article class="tile"><h3>Focus</h3><p>Robotics, Front-end, Design for Manufacturing</p></article>
-            <article class="tile"><h3>Hobbies</h3><p>Marathons, sports, reading, travel, brain teasers</p></article>
+            <article class="tile"><h3>Hobbies</h3><p>Running, sports, reading, travel, brain teasers</p></article>
           </div>
         </div>
         <aside>
@@ -60,6 +60,20 @@
       <div class="container">
         <h2 class="section-title">Experience</h2>
         <ol class="timeline-list">
+          <li class="timeline-item reveal">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>Robotics Software Engineer</h3>
+              <h4 class="company-name">Daylun</h4>
+              <span class="muted">Sep 2025 — Dec 2025</span>
+              <ul>
+                <li>Designed and implemented a path-planning algorithm for an autonomous mobile robot (AMR) to navigate multiple assembly stations for modular housing panel construction.</li>
+                <li>Developed an autonomous pick-and-place system using ROS2, Gazebo, and MoveIt, including writing custom robot controllers from scratch to handle stud placement on the AMR.</li>
+                <li>Engineered autonomous nailing, spray-foam, and steel-strapping systems to automate panel processes.</li>
+                <li>Built and simulated the entire AMR workflow in NVIDIA IsaacSim, coding each station's logic and motion sequence for end-to-end system validation.</li>
+              </ul>
+            </div>
+          </li>
           <li class="timeline-item reveal">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
@@ -194,12 +208,27 @@
           <article class="tile reveal">
             <h3>University of Waterloo</h3>
             <p class="muted">BASc (Honours) Mechatronics Engineering — Sep 2022 — Apr 2027 (expected)</p>
-            <p>Relevant Courses: Digital Computation; Mechatronics Engineering Design; Data Structures and Algorithms; Introduction to Microprocessors and Digital Logic; Sensors and Instrumentation; Mechanics of Deformable Solids; Introduction to Computer Structures and Real-Time Systems; Introduction to Thermodynamics and Heat Transfer; Actuators and Power Electronics; Microprocessor Systems and Interfacing.</p>
+            <p><strong>Relevant Courses:</strong></p>
+            <ul>
+              <li>Digital Computation</li>
+              <li>Mechatronics Engineering Design</li>
+              <li>Data Structures and Algorithms</li>
+              <li>Introduction to Microprocessors and Digital Logic</li>
+              <li>Sensors and Instrumentation</li>
+              <li>Mechanics of Deformable Solids</li>
+              <li>Introduction to Computer Structures and Real-Time Systems</li>
+              <li>Introduction to Thermodynamics and Heat Transfer</li>
+              <li>Actuators and Power Electronics</li>
+              <li>Microprocessor Systems and Interfacing</li>
+            </ul>
           </article>
           <article class="tile reveal">
             <h3>Westlane Secondary School</h3>
             <p class="muted">Ontario Secondary School Diploma (OSSD) — Sep 2018 — Jun 2022</p>
-            <p>Founded and led a VEX Robotics team; graduated with 98.1% overall.</p>
+            <ul>
+              <li>Founded and led a VEX Robotics team</li>
+              <li>Graduated with 98.1% overall</li>
+            </ul>
           </article>
         </div>
       </div>
