--- a/index.html
+++ b/index.html
@@ -45,17 +45,12 @@
     <section class="hero">
       <div class="container grid-2">
         <div class="hero-copy">
-          <h1 class="hero-title">Engineering systems that move—robots, apps, and ideas.</h1>
+          <h1 class="hero-title">Hello!</h1>
           <p class="hero-subtitle">I'm Yash Patel, a 4th‑year Mechatronics Engineering student at the University of Waterloo. I build across robotics (ROS2, C++/Python), full‑stack web (React/JS), and mechanical design (SolidWorks/AutoCAD), with a focus on practical impact and reliability.</p>
           <div class="hero-cta">
             <a class="btn btn-primary" href="/projects.html">Explore Projects</a>
             <a class="btn btn-outline" href="/about.html">About Me</a>
           </div>
-          <ul class="hero-highlights">
-            <li>Robotics • ROS2 • C++ • Python • OpenCV</li>
-            <li>Web • HTML/CSS/JS • React • Excel VBA</li>
-            <li>Design • SolidWorks • AutoCAD • GD&T</li>
-          </ul>
         </div>
         <div class="hero-visual">
           <div class="card code-card" aria-hidden="true">
@@ -80,7 +75,7 @@ launch(["gui-ros2","web-dashboard"]) // systems that move
 
     <section class="section highlights">
       <div class="container">
-        <h2 class="section-title">Highlights</h2>
+        <h2 class="section-title">Skills Highlights</h2>
         <div class="cards">
           <article class="tile reveal">
             <h3>Robotics</h3>
@@ -100,8 +95,8 @@ launch(["gui-ros2","web-dashboard"]) // systems that move
 
     <section class="section recent-projects">
       <div class="container">
+        <h2 class="section-title">Recent Projects</h2>
         <div class="section-header">
-          <h2 class="section-title">Recent Projects</h2>
           <a class="link" href="./projects.html">View all</a>
         </div>
         <div id="recent-projects" class="project-grid"></div>
